@@ -1,19 +1,11 @@
 plugins {
     java
     application
-    id("org.javamodularity.moduleplugin") version "1.8.15"
-    id("org.openjfx.javafxplugin") version "0.0.13"
-    id("org.beryx.jlink") version "2.25.0"
+    id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 group = "com.example"
-version = "1.0-SNAPSHOT"
-
-repositories {
-    mavenCentral()
-}
-
-val junitVersion = "5.12.1"
+version = "1.0"
 
 java {
     toolchain {
@@ -21,34 +13,31 @@ java {
     }
 }
 
-tasks.withType<JavaCompile> {
-    options.encoding = "UTF-8"
+repositories {
+    mavenCentral()
 }
 
 application {
-    mainModule.set("com.example.sms_java")
-    mainClass.set("com.example.sms_java.HelloApplication")
+    mainClass.set("com.example.sms_java.MainApp")
+    applicationDefaultJvmArgs = listOf(
+        "--enable-native-access=javafx.graphics",
+        "-Dprism.order=sw,es2,d3d"
+    )
 }
 
 javafx {
-    version = "21.0.6"
-    modules = listOf("javafx.controls", "javafx.fxml")
+    version = "21"
+    modules = listOf("javafx.controls", "javafx.fxml", "javafx.graphics")
 }
 
 dependencies {
+    implementation("org.mariadb.jdbc:mariadb-java-client:3.3.3")
     implementation("org.controlsfx:controlsfx:11.2.1")
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.12.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.12.1")
 }
 
-tasks.withType<Test> {
+tasks.test {
     useJUnitPlatform()
-}
-
-jlink {
-    imageZip.set(layout.buildDirectory.file("/distributions/app-${javafx.platform.classifier}.zip"))
-    options.set(listOf("--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages"))
-    launcher {
-        name = "app"
-    }
 }
